--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
  
 	<display-name>Spring MVC Application</display-name>
- 
+ 	
 	<servlet>
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet
@@ -17,6 +17,27 @@
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.css</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.js</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.gif</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.jpg</url-pattern>
+</servlet-mapping>
+<servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.png</url-pattern>
+</servlet-mapping>
  
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -28,6 +49,7 @@
                       org.springframework.web.context.ContextLoaderListener
                 </listener-class>
 	</listener>
+
 	
 	<welcome-file-list>
 <!--  	<welcome-file>/WEB-INF/pages/registerParticipant.jsp</welcome-file> -->
