--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,23 @@
 	        <artifactId>slf4j-log4j12</artifactId>
 	        <version>1.5.2</version>
     	</dependency>
+    	<dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>servlet-api</artifactId>
+	<version>2.5</version>
+	<scope>provided</scope>
+  </dependency>
+  <dependency>
+	<groupId>org.apache.httpcomponents</groupId>
+	<artifactId>httpclient</artifactId>
+	<version>4.0-alpha4</version>
+</dependency>
+            <dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20090211</version>
+</dependency>
+            
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
