--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,8 +56,7 @@
 
 	
 	<welcome-file-list>
-<!--  	<welcome-file>/WEB-INF/pages/registerParticipant.jsp</welcome-file> -->
-        <welcome-file>/WEB-INF/pages/HomePage.jsp</welcome-file>
+        <welcome-file>/WEB-INF/pages/LoginPage.jsp</welcome-file>
      </welcome-file-list>
         
  
