--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,16 @@
 	    	<type>jar</type>
     		<scope>compile</scope>
     	</dependency>
+    	<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>1.1.0.Final</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>5.0.1.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
