Updated Sign Up functionality, SignUp Validator now validates existing email from database also.

--- a/src/main/resources/edu/sjsu/conference/properties/login.properties
+++ b/src/main/resources/edu/sjsu/conference/properties/login.properties
@@ -6,3 +6,4 @@ required.firstName = First Name is required!
 required.lastName = Last Name is required!
 required.emailId = Email id is required!
 notmatch.emailId = Enter a valid email!
+alreadypresent.emailId = Someone has already used that emailId as username. Try another?
