--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<dependency>
+  <groupId>com.amazonaws</groupId>
+  <artifactId>aws-java-sdk</artifactId>
+  <version>1.4.3</version>
+</dependency>
 
 		<!-- Spring data mongodb -->
 		<dependency>
