Login Page Modification

--- a/src/main/resources/edu/sjsu/conference/properties/login.properties
+++ b/src/main/resources/edu/sjsu/conference/properties/login.properties
@@ -7,3 +7,5 @@ required.lastName = Last Name is required!
 required.emailId = Email id is required!
 notmatch.emailId = Enter a valid email!
 alreadypresent.emailId = Someone has already used that emailId as username. Try another?
+incorrect.login = Invalid UserName/Password !
+incorrect.role = Enter a correct Username/Role !
