--- a/src/main/resources/edu/sjsu/conference/properties/login.properties
+++ b/src/main/resources/edu/sjsu/conference/properties/login.properties
@@ -1,7 +1,7 @@
 required.username = Username is required!
 required.password = Password is required!
 required.confirmPassword = Confirm password is required!
-notmatch.password = Password and Confirm password not the same!
+notmatch.password = Password and Confirm password are not the same!
 required.firstName = First Name is required!
 required.lastName = Last Name is required!
 required.emailId = Email id is required!
